# frostbyte_terminal

./: .gitignore  Cargo.toml  PKGBUILD  Readme.md
.github/workflows/: build-for-release.yml  docs.yml
async_pty/: Cargo.toml
async_pty/src/: lib.rs
docs/: redirect.html
examples/local_terminal/: Cargo.toml
examples/local_terminal/src/: main.rs
frostbyte_term/: Cargo.toml  build.rs
frostbyte_term/assets/: frostbyte-terminal.desktop  frostbyte_terminal.desktop
frostbyte_term/src/: main.rs  threaded_writer.rs  ui.rs
frostbyte_term/src/ui/: local_terminal.rs
frozen_term/: Cargo.toml  Readme.md
frozen_term/src/: lib.rs  local_terminal.rs  scrollbar.rs  terminal.rs  terminal2.rs  terminal_grid.rs  wezterm.rs
frozen_term/src/terminal/: style.rs
frozen_term/src/wezterm/: prerenderer.rs  selection.rs
