[workspace]
default-members = ["frozen_term", "frostbyte_term", "async_pty"]

resolver = "2"

members = ["async_pty", "frozen_term", "frostbyte_term", "examples/*"]


[patch."https://github.com/iced-rs/iced.git"]
iced = { git = "https://github.com/acul009/iced.git" }
iced_runtime = { git = "https://github.com/acul009/iced.git" }
iced_core = { git = "https://github.com/acul009/iced.git" }
iced_program = { git = "https://github.com/acul009/iced.git" }
iced_renderer = { git = "https://github.com/acul009/iced.git" }
iced_futures = { git = "https://github.com/acul009/iced.git" }
iced_graphics = { git = "https://github.com/acul009/iced.git" }
iced_debug = { git = "https://github.com/acul009/iced.git" }
iced_devtools = { git = "https://github.com/acul009/iced.git" }
iced_widget = { git = "https://github.com/acul009/iced.git" }
