[package]
name = "async_pty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
portable-pty = "0.9.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
