[package]
name = "frostbyte_term"
version = "0.1.2"
edition = "2024"

[dependencies]
frozen_term = { path = "../frozen_term", features = ["iced-master"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["wgpu"] }
# iced = { workspace = true }
tokio-util = { workspace = true }
sipper = { workspace = true }
async_pty = { path = "../async_pty" }
# iced_aw = { version = "0.12.2", features = ["tab_bar", "tabs"] }
global-hotkey = "0.7.0"
tray-icon = "0.21.0"
tokio = "1.46.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
signal-hook = "0.3.18"

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop.git", branch = "iced14" }
gtk = "0.18.2"


[build-dependencies]
embed-resource = "3.0"
