[package]
name = "frostbyte_term"
version = "0.1.5"
edition = "2024"

[package.metadata.frost_wizard]
friendly_name = "Frostbyte Terminal"

[dependencies]
frozen_term = { path = "../frozen_term", features = ["local-terminal"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["wgpu"] }
async_pty = { path = "../async_pty" }
global-hotkey = "0.7.0"
tray-icon = "0.21.3"
tokio = "1.49.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
signal-hook = "0.3.18"

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { git = "https://github.com/acul009/exwlshelleventloop.git" }
gtk = "0.18.2"


[build-dependencies]
embed-resource = "3.0"
