[package]
name = "frozen_term"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A terminal emulator to embed into your iced application - includes demo app"

[dependencies]
iced_master = { package = "iced", git = "https://github.com/iced-rs/iced.git", features = [
    "advanced",
    "tokio",
], optional = true }
thiserror = { workspace = true }
wezterm-term = { git = "https://github.com/wez/wezterm.git" }
termwiz = { git = "https://github.com/wez/wezterm.git" }
tokio-stream = "0.1.17"
tokio = { version = "1.45.0", default-features = false, features = ["sync"] }
iced_013 = { package = "iced", version = "0.13.1", optional = true, features = [
    "advanced",
    "tokio",
] }

[features]
iced-master = ["iced_master"]
iced-013 = ["iced_013"]
