[package]
name = "frozen_term"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "A terminal emulator to embed into your iced application - includes demo app"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "advanced",
    "tokio",
    "sipper",
] }
thiserror = "2"
wezterm-term = { git = "https://github.com/wez/wezterm.git" }
wezterm-escape-parser = { git = "https://github.com/wez/wezterm.git" }
termwiz = { git = "https://github.com/wez/wezterm.git" }
tokio-stream = "0.1"
tokio = { version = "1", default-features = false, features = ["sync"] }
async_pty = { path = "../async_pty", optional = true }

[features]
local-terminal = ["async_pty"]
